--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-		<meta charset="utf-8">
-		<title>ununununun.github.io</title>
+		<meta charset="UTF-8">
+		<title>Goodbye World</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
-	<body>
-		<h1>ununununun.github.io</h1>
+
+	<body translate="no">
+		<div class="container">
+			<span class="txt anim-text-flow">Goodbye World</span>
+		</div>
+
+		<a target="_blank" href="https://ooix.cn">@ooix</a>
+
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+		<script id="rendered-js">
+			$('.txt').html(function(i, html) {
+				var chars = $.trim(html).split("");
+
+				return '<span>' + chars.join('</span><span>') + '</span>';
+			});
+		</script>
+
 	</body>
 </html>
