--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		<a target="_blank" href="https://ooix.cn">@ooix</a>
 
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 
 		<script id="rendered-js">
 			$('.txt').html(function(i, html) {
